objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Architecture__c</fullName>
        <label>Architecture</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizing_Principle__c</fullName>
        <label>Organizing Principle</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Architecture__c</fullName>
        <label>Sub-Architecture</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CEE Topic</label>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEE Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Topics</fullName>
        <columns>NAME</columns>
        <columns>Architecture__c</columns>
        <columns>Sub_Architecture__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>Topics</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>